--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://enigma.co",
   "dependencies": {
-    "bn.js": "^4.11.8",
+    "bn.js": "^5.0.0",
     "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
@@ -25,14 +25,14 @@
     "buffer": "^5.1.0",
     "core-js": "^3.1.4",
     "dotenv": "^8.2.0",
-    "elliptic": "6.4.0",
+    "elliptic": "^6.5.0",
     "eth-crypto": "^1.5.0",
     "ethereumjs-abi": "^0.6.5",
     "msgpack-lite": "^0.1.26",
-    "node-forge": "^0.7.5",
+    "node-forge": "^0.9.1",
     "openzeppelin-solidity": "2.4",
     "regenerator-runtime": "^0.13.3",
-    "rlp": "2.1.0",
+    "rlp": "^2.2.0",
     "truffle-contract": "^4.0.31",
     "web3": "1.0.0-beta.37"
   }
