--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -74,9 +74,9 @@
     "chai-events": "0.0.3",
     "codecov": "^3.5.0",
     "dockerode": "^3.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-loader": "^2.0.0",
+    "eslint": "6.6.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-loader": "3.0.2",
     "jest": "^24.8.0",
     "jest-circus": "^24.8.0",
     "jsdom": "^15.2.0",
