--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://enigma.co",
   "dependencies": {
+    "@truffle/contract": "^4.1.0",
     "any-promise": "^1.3.0",
     "axios": "0.19.0",
     "body-parser": "^1.18.3",
@@ -42,6 +43,7 @@
     "eth-crypto": "^1.5.0",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^6.0.0",
+    "ethers": "^4.0.39",
     "eventemitter3": "^4.0.0",
     "filereader": "^0.10.3",
     "jayson": "^3.0.1",
@@ -55,7 +57,6 @@
     "rlp": "^2.2.0",
     "source-map-support": "^0.5.9",
     "tls": "0.0.1",
-    "@truffle/contract": "^4.1.0",
     "uuid": "^3.3.2",
     "web3-utils": "^1.2.4",
     "webpack-node-externals": "^1.7.2",
