--- a/.drone.yml
+++ b/.drone.yml
@@ -9,19 +9,27 @@ steps:
       - name: sock
         path: /var/run/docker.sock
     commands:
-      - git clone https://github.com/enigmampc/discovery-docker-network.git
-      - cd discovery-docker-network && cp .env-template .env
-      - sed -i "s/COMPOSE_PROJECT_NAME=.*/COMPOSE_PROJECT_NAME=enigma_${DRONE_BUILD_NUMBER}/" .env
       - export MATCHING_BRANCH_CORE="$(git ls-remote --heads https://github.com/enigmampc/enigma-core.git ${DRONE_BRANCH} | wc -l)"
       - export MATCHING_BRANCH_P2P="$(git ls-remote --heads https://github.com/enigmampc/enigma-p2p.git ${DRONE_BRANCH} | wc -l)"
-      - export DOCKER_TAG=p2p_${DRONE_BUILD_NUMBER}
+      - export MATCHING_BRANCH_DOCKER="$(git ls-remote --heads https://github.com/enigmampc/docker-environment.git ${DRONE_BRANCH} | wc -l)"
+      - export DOCKER_TAG=contract_${DRONE_BUILD_NUMBER}
+      - |
+        if [[ "$MATCHING_BRANCH_DOCKER" == 1 ]]; then
+          # which includes master and develop because these always exist
+          git clone --single-branch --branch ${DRONE_BRANCH} https://github.com/enigmampc/docker-environment.git
+        else
+          # otherwise we are on a feature branch, and we'll build against develop
+          git clone --single-branch --branch develop https://github.com/enigmampc/docker-environment.git
+        fi
+      - cd docker-environment && cp .env-template .env
+      - sed -i "s/COMPOSE_PROJECT_NAME=.*/COMPOSE_PROJECT_NAME=enigma_contract_${DRONE_BUILD_NUMBER}/" .env
       - sed -i "s/DOCKER_TAG=latest/DOCKER_TAG=${DOCKER_TAG}/" .env;
       - |
         /bin/bash -c '
-        declare -a PROJECTS=(core km p2p)
-        declare -A DOCKER_IMAGES=([core]=enigma_core_hw [km]=enigma_km_hw [p2p]=enigma_p2p)
+        declare -a PROJECTS=(worker km)
+        declare -A DOCKER_IMAGES=([core]=worker_hw [km]=key_management_hw)
         declare -A GIT_BRANCH_ARG=([core]=GIT_BRANCH_CORE [km]=GIT_BRANCH_CORE [p2p]=GIT_BRANCH_P2P)
-        declare -A PROJECT_DIRECTORY=([core]=enigma-core [km]=enigma-core [p2p]=enigma-p2p)
+        declare -A PROJECT_DIRECTORY=([worker]=worker [km]=km)
         declare -A PROJECT_BRANCH_FOUND=([core]=$MATCHING_BRANCH_CORE [km]=$MATCHING_BRANCH_CORE [p2p]=$MATCHING_BRANCH_P2P)
         for project in $${PROJECTS[@]}; do
           DOCKER_IMAGE="enigmampc/$${DOCKER_IMAGES[$project]}"
@@ -32,21 +40,31 @@ steps:
             docker pull "$DOCKER_IMAGE:develop"
             docker tag "$DOCKER_IMAGE:develop" "$DOCKER_IMAGE:$DOCKER_TAG"
           else
-            cd "$${PROJECT_DIRECTORY[$project]}"
             if [[ "$project" == "km" ]]; then
-              docker build -f Dockerfile.km --build-arg GIT_BRANCH_CORE=${DRONE_BRANCH} --build-arg SGX_MODE=HW -t "$DOCKER_IMAGE:$DOCKER_TAG" --no-cache .
-            elif [[ "$project" == "core" ]]; then
-              docker build --build-arg GIT_BRANCH_CORE=${DRONE_BRANCH} --build-arg SGX_MODE=HW -t "$DOCKER_IMAGE:$DOCKER_TAG" --no-cache .
+              make clone-km BRANCH=${DRONE_BRANCH}
+              make build-km DOCKER_TAG=$DOCKER_TAG
             else
-              docker build --build-arg "$${GIT_BRANCH_ARG[$project]}=${DRONE_BRANCH}" -t "$DOCKER_IMAGE:$DOCKER_TAG" --no-cache .
+              if [[ "$MATCHING_BRANCH_P2P" == 1 ]]; then
+                make clone-p2p BRANCH=${DRONE_BRANCH}
+              else
+                make clone-p2p BRANCH=develop
+              fi
+              if [[ "$MATCHING_BRANCH_CORE" == 1 ]]; then
+                make clone-core BRANCH=${DRONE_BRANCH}
+              else
+                make clone-core BRANCH=develop
+              fi
+              make build-worker DOCKER_TAG=$DOCKER_TAG
             fi
-            cd ..
           fi
         done'
-      - cd enigma-contract && docker build --build-arg GIT_BRANCH_CONTRACT=${DRONE_BRANCH} -t enigmampc/enigma_contract:$DOCKER_TAG --no-cache . && cd ..
+      - make clone-contract BRANCH=${DRONE_BRANCH}
+      - make clone-client BRANCH=${DRONE_BRANCH}
+      - make build-contract DOCKER_TAG=$DOCKER_TAG
+      - make build-contract DOCKER_TAG=$DOCKER_TAG
       - export NODES=3
-      - docker-compose -f docker-compose.yml -f docker-compose.hw.yml -f docker-compose.test.yml up --scale core=$NODES --scale p2p=$NODES --exit-code-from client && export RESULT=$? || export RESULT=$?
-      - docker-compose -f docker-compose.yml -f docker-compose.hw.yml down -v --rmi all || true
+      - docker-compose -f docker-compose_hw.yml up --scale worker=$NODES --exit-code-from client && export RESULT=$? || export RESULT=$?
+      - docker-compose -f docker-compose_hw.yml up down -v --rmi all || true
       - if [ $RESULT -ne 0 ]; then exit 1; fi
 
   - name: deploy
@@ -67,11 +85,12 @@ steps:
       PASSWORD:
         from_secret: password
     commands:
-      - cd discovery-docker-network/enigma-contract
       - echo $PASSWORD | docker login -u $USERNAME --password-stdin
       - if [[ ${DRONE_BRANCH} == "master" ]]; then export DOCKER_TAG=latest; else export DOCKER_TAG=develop; fi
-      - docker build --build-arg GIT_BRANCH_CONTRACT=${DRONE_BRANCH} -t enigmampc/enigma_contract:$DOCKER_TAG --no-cache .
-      - docker push enigmampc/enigma_contract:$DOCKER_TAG
+      - docker tag enigmampc/contract:contract_${DRONE_BUILD_NUMBER} enigmampc/contract:$DOCKER_TAG
+      - docker tag enigmampc/client:contract_${DRONE_BUILD_NUMBER} enigmampc/client:$DOCKER_TAG
+      - docker push enigmampc/contract:$DOCKER_TAG
+      - docker push enigmampc/client:$DOCKER_TAG
 
 volumes:
   - name: sock
