--- a/.drone.yml
+++ b/.drone.yml
@@ -69,10 +69,10 @@ steps:
           make clone-client BRANCH=develop
         fi
       - make build-contract DOCKER_TAG=$DOCKER_TAG
-      - make build-contract DOCKER_TAG=$DOCKER_TAG
+      - make build-client DOCKER_TAG=$DOCKER_TAG
       - export NODES=3
       - docker-compose -f docker-compose.yml -f docker-compose.hw.yml up --scale worker=$NODES --exit-code-from client && export RESULT=$? || export RESULT=$?
-      - docker-compose -f docker-compose.yml -f docker-compose.hw.yml up down -v --rmi all || true
+      - docker-compose -f docker-compose.yml -f docker-compose.hw.yml down -v --rmi all || true
       - if [ $RESULT -ne 0 ]; then exit 1; fi
 
   - name: deploy
