--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -31,22 +31,22 @@
   },
   "homepage": "https://enigma.co",
   "dependencies": {
-    "@truffle/contract": "^4.1.0",
+    "@truffle/contract": "^4.1.1",
     "any-promise": "^1.3.0",
     "axios": "0.19.0",
     "body-parser": "^1.18.3",
     "buffer": "^5.1.0",
     "connect": "^3.6.6",
-    "core-js": "^3.1.4",
+    "core-js": "^3.4.8",
     "create-file-webpack": "^1.0.2",
-    "elliptic": "^6.5.0",
+    "elliptic": "^6.5.2",
     "eth-crypto": "^1.5.0",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^6.0.0",
-    "ethers": "^4.0.39",
+    "ethers": "^4.0.40",
     "eventemitter3": "^4.0.0",
     "filereader": "^0.10.3",
-    "jayson": "^3.0.1",
+    "jayson": "^3.2.0",
     "jsbi": "^3.1.0",
     "net": "^1.0.2",
     "node-fetch": "^2.3.0",
@@ -63,10 +63,10 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/register": "^7.7.4",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.0-beta.4",
@@ -76,7 +76,7 @@
     "dockerode": "^3.0.0",
     "eslint": "6.6.0",
     "eslint-config-google": "0.14.0",
-    "eslint-loader": "3.0.2",
+    "eslint-loader": "^3.0.3",
     "jest": "^24.9.0",
     "jest-circus": "^24.9.0",
     "jsdom": "^15.2.0",
