--- a/.drone.yml
+++ b/.drone.yml
@@ -50,8 +50,10 @@ steps:
               fi
               if [[ "$MATCHING_BRANCH_CORE" -eq 1 ]]; then
                 make clone-core BRANCH=${DRONE_BRANCH}
+                make build-core DOCKER_TAG=$DOCKER_TAG
               else
-                make clone-core BRANCH=develop
+                docker pull "enigmampc/core-artifact-hw:develop"
+                docker tag "enigmampc/core-artifact-hw:develop" "enigmampc/core-artifact-hw:$DOCKER_TAG"
               fi
               make build-worker DOCKER_TAG=$DOCKER_TAG
             fi
