--- a/.drone.yml
+++ b/.drone.yml
@@ -72,9 +72,12 @@ steps:
       - make build-contract DOCKER_TAG=$DOCKER_TAG
       - make build-client DOCKER_TAG=$DOCKER_TAG
       - export NODES=3
-      - SGX_MODE=HW docker-compose -f docker-compose.yml -f docker-compose.hw.yml up --scale worker=$NODES --exit-code-from client & sleep 240 && docker-compose exec -T client make test && export RESULT=$? || export RESULT=$?
-      - docker-compose -f docker-compose.yml -f docker-compose.hw.yml down -v --rmi all || true
-      - if [ $RESULT -ne 0 ]; then exit 1; fi
+      - SGX_MODE=HW docker-compose -f docker-compose.yml -f docker-compose.hw.yml up --scale worker=$NODES &
+      - sleep 240
+      - docker-compose exec -T client make test
+      - export NEW_NODE_NUMBER=$(($NODES + 1))
+      - SGX_MODE=HW docker-compose -f docker-compose.yml -f docker-compose.hw.yml up -d --scale worker="$NEW_NODE_NUMBER"
+      - timeout 1500 /bin/bash -c 'SGX_MODE=HW docker-compose -f docker-compose.yml -f docker-compose.hw.yml logs -f --tail 10 worker | grep -m 1 -P "worker_${NEW_NODE_NUMBER}.+?success syncing pipeline"'
 
   - name: deploy
     image: enigmampc/docker-client
