--- a/.drone.yml
+++ b/.drone.yml
@@ -107,6 +107,22 @@ steps:
       - docker push enigmampc/contract:$DOCKER_TAG
       - docker push enigmampc/client:$DOCKER_TAG
 
+  - name: cleanup
+    image: enigmampc/docker-client
+    privileged: true
+    volumes:
+      - name: sock
+        path: /var/run/docker.sock
+    depends_on:
+      - deploy
+    when:
+      status:
+        - success
+        - failure
+    commands:
+      - cd docker-environment
+      - docker-compose -f docker-compose.yml -f docker-compose.hw.yml down -v --rmi all --remove-orphans
+
 volumes:
   - name: sock
     host:
