--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/register": "^7.7.4",
     "@truffle/contract": "^4.1.0",
+    "@truffle/hdwallet-provider": "^1.0.28",
     "buffer": "^5.4.3",
     "core-js": "^3.4.8",
     "dotenv": "^8.2.0",
