--- a/.drone.yml
+++ b/.drone.yml
@@ -121,7 +121,9 @@ steps:
         - failure
     commands:
       - cd docker-environment
+      - export DOCKER_TAG=contract_${DRONE_BUILD_NUMBER}
       - docker-compose -f docker-compose.yml -f docker-compose.hw.yml down -v --rmi all --remove-orphans
+      - docker rmi -f enigmampc/core-artifact-hw:$DOCKER_TAG
 
 volumes:
   - name: sock
