--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@truffle/contract": "^4.1.1",
     "any-promise": "^1.3.0",
+    "async": "^3.1.1",
     "axios": "0.19.0",
     "body-parser": "^1.18.3",
     "buffer": "^5.1.0",
